; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/ntdll/extr_RtlBitmap.c_Test_RtlFindMostSignificantBit.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/ntdll/extr_RtlBitmap.c_Test_RtlFindMostSignificantBit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Test_RtlFindMostSignificantBit() #0 {
  %1 = call i32 @RtlFindMostSignificantBit(i32 0)
  %2 = call i32 @ok_int(i32 %1, i32 -1)
  %3 = call i32 @RtlFindMostSignificantBit(i32 1)
  %4 = call i32 @ok_int(i32 %3, i32 0)
  %5 = call i32 @RtlFindMostSignificantBit(i32 2)
  %6 = call i32 @ok_int(i32 %5, i32 1)
  %7 = call i32 @RtlFindMostSignificantBit(i32 0)
  %8 = call i32 @ok_int(i32 %7, i32 60)
  %9 = call i32 @RtlFindMostSignificantBit(i32 0)
  %10 = call i32 @ok_int(i32 %9, i32 63)
  %11 = call i32 @RtlFindMostSignificantBit(i32 1)
  %12 = call i32 @ok_int(i32 %11, i32 63)
  %13 = call i32 @RtlFindMostSignificantBit(i32 -1)
  %14 = call i32 @ok_int(i32 %13, i32 63)
  %15 = call i32 @RtlFindMostSignificantBit(i32 1879048192)
  %16 = call i32 @ok_int(i32 %15, i32 30)
  ret void
}

declare dso_local i32 @ok_int(i32, i32) #1

declare dso_local i32 @RtlFindMostSignificantBit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
